--- a/rocro.yml
+++ b/rocro.yml
@@ -1,4 +1,59 @@
-# tractrix/codelift-plugins#1308
----
 inspecode:
-  android-lint: default
+
+  astyle:
+    auto-fix: true
+    thresholds: { num-issues: 999 }
+
+  checkstyle:
+    auto-fix: true
+    thresholds: { num-issues: 999 }
+
+  clang-format:
+    auto-fix: true
+    thresholds: { num-issues: 999 }
+
+  cpd:
+    thresholds: { num-issues: 999 }
+
+  #### not supported yet ??
+  #fortify:
+  #  thresholds: { num-issues: 999 }
+
+  fossology:
+    thresholds: { num-issues: 999 }
+
+  grep:
+    thresholds: { num-issues: 999 }
+
+  infer:
+    thresholds: { num-issues: 999 }
+
+  jscpd:
+    thresholds: { num-issues: 999 }
+
+  misspell:
+    auto-fix: true
+    thresholds: { num-issues: 999 }
+
+  pmd:
+    auto-fix: true
+    thresholds: { num-issues: 999 }
+
+  spotbugs:
+  - options:
+      -targets: libtermexec
+    thresholds: { num-issues: 999 }
+  - options:
+      -targets: term
+    thresholds: { num-issues: 999 }
+
+  uncrustify:
+    auto-fix: true
+    thresholds: { num-issues: 999 }
+
+  #### not supported yet ??
+  #understand:
+  #  thresholds: { num-issues: 999 }
+
+  unused:
+    thresholds: { num-issues: 999 }
