set lintOptions abortOnError=false

--- a/libtermexec/build.gradle
+++ b/libtermexec/build.gradle
@@ -28,6 +28,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        abortOnError false
+    }
 }
 
 // by default recent plugin version does not copy any AIDL files "to avoid publishing too much"
